--- a/scripts/config-release.mk.in
+++ b/scripts/config-release.mk.in
@@ -2,7 +2,7 @@ CC=@CC@
 PREFIX=@prefix@
 CXX=@CXX@
 CXXFLAGS=@CPPFLAGS@ @CXXFLAGS@ -c -O3 -D _EXTERNAL_RELEASE -fomit-frame-pointer -msse -msse2 
-LTOFLAG=-flto=jobserver
+LTOFLAG=-flto=jobserver -flto-compression-level=9
 CXX_OUT_FLAG=-o 
 OBJ_EXT=.o
 LTO_OBJ_EXT=-lto.o
